--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 		        <div class="container">
 		            <div class="navbar-header">
 		                
-		                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+		                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" id = "brand_img" href="#home"><img alt="JobGo" title="JobGO" src="/static/images/JobGo.png"></a>
+						<a class="navbar-brand" id = "brand_img" href="#home"><img src="static/images/JobGo.png" alt="JobGo" title="JobGO" ></a>
 		            </div>
 		            <!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="main_nav_collapsed">
@@ -831,7 +831,7 @@
 	    		</div>
 	    </footer>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="static/lib/bootstrap/js/bootstrap.min.js"></script>
 	<script src="static/js/main.min.js"></script>
 	</body>
